feat(services): get a service
